# CMakeList.txt : CMake project for Concurrent Traffic Simulation, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ConcurrentTrafficSimulation "Concurrent Traffic Simulation.cpp" "Concurrent Traffic Simulation.h")

# TODO: Add tests and install targets if needed.
